# crate-python

./: .coveragerc  .gitignore  .mailmap  .scrutinizer.yml  .travis.yml  CHANGES.rst  CHANGES.txt  CONTRIBUTING.rst  DEVELOP.rst  LICENSE  MANIFEST.in  NOTICE  README.rst  appveyor.yml  azure-pipelines.yml  base.cfg  bootstrap.py  bootstrap.sh  buildout.cfg  codecov.yml  crate.cfg  create_tag.sh  lgtm.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  versions.cfg
.github/: CODEOWNERS  codeql.yml
.github/workflows/: codeql.yml  docs.yml  main.yml  nightly.yml  release.yml  tests.yml
aiocrate/: __init__.py  cursor.py  setup.py
aiocrate/tests/: async_connection_test.py
devtools/: buildout.cfg  bundle.sh  create_tag.sh  setup_ci.sh
docs/: .gitignore  Makefile  advanced_usage.txt  blobs.rst  blobs.txt  build.json  client.txt  conf.py  connect.rst  connect.txt  data-types.rst  getting-started.rst  getting-started.txt  https.txt  index-all.rst  index.rst  index.txt  install-first-use.txt  other-options.rst  query.rst  query.txt  requirements.txt  sqlalchemy.rst  sqlalchemy.txt  tests.py
docs/_extra/: robots.txt
docs/appendices/: compatibility.rst  compatibility.txt  data-types.rst  data-types.txt  index.rst  index.txt
docs/by-example/: blob.rst  client.rst  connection.rst  cursor.rst  http.rst  https.rst  index.rst
docs/by-example/sqlalchemy/: advanced-querying.rst  cru.rst  crud.rst  dataframe.rst  getting-started.rst  inspection-reflection.rst  internals.rst  working-with-types.rst
examples/: README.rst  async_streaming.py  async_table.py  column_autogenerate_uuid.py  column_server_default.py  insert_efficient.py  insert_pandas.py  sync_table.py
src/crate/: __init__.py  tests.py
src/crate/client/: __init__.py  __version__.py  _pep440.py  blob.py  blob.txt  blobs.txt  compat.py  connection.py  connection.txt  converter.py  core.py  crash.py  crash.txt  cursor.py  cursor.txt  exceptions.py  http.py  http.txt  index.txt  invalid_ca.pem  params.py  result.py  test_connection.py  test_cursor.py  test_exceptions.py  test_http.py  test_https.pem  test_https_ca.pem  test_result.py  test_support.py  test_util.py  tests.py
src/crate/client/django/backend/: base.py  client.py  compiler.py  creation.py  introspection.py  operations.py  validation.py
src/crate/client/django/models/: fields.py
src/crate/client/django/tests/: backend.txt  models.py  settings.py
src/crate/client/doctests/: blob.txt  client.txt  connection.txt  cursor.txt  http.txt  https.txt  mocking.txt  sqlalchemy.txt
src/crate/client/pki/: client_invalid.pem  client_valid.pem  readme.rst  server_valid.pem
src/crate/client/sqlalchemy/: __init__.py  compiler.py  dialect.py  dialect.txt  dialect_more.py  itests.txt  monkey.py  reflection.txt  sa_version.py  support.py  test.py  types.py
src/crate/client/sqlalchemy/compat/: api13.py  core10.py  core14.py  core20.py
src/crate/client/sqlalchemy/doctests/: dialect.txt  itests.txt  reflection.txt
src/crate/client/sqlalchemy/predicates/: __init__.py
src/crate/client/sqlalchemy/tests/: __init__.py  array_test.py  bulk_test.py  compiler_test.py  connection_test.py  create_table_test.py  datetime_test.py  dialect_test.py  dict_test.py  function_test.py  insert_from_select_test.py  match_test.py  query_caching.py  update_test.py  warnings_test.py
src/crate/testing/: layer.py  layer.txt  settings.py  test_datetime.py  test_layer.py  tests.py  util.py
src/crate/testing/doctests/: layer.txt
src/crate/testing/testdata/data/: test_a.json
src/crate/testing/testdata/mappings/: locations.sql  test_a.json
tests/: __init__.py  conftest.py  test.py  test_docs.py
tests/assets/mappings/: locations.sql
tests/assets/pki/: cacert_valid.pem  client_invalid.pem  client_valid.pem  readme.rst
tests/client/: layer.py  settings.py  test_blob.py  test_connection.py  test_cursor.py  test_exceptions.py  test_http.py  test_params.py  test_result.py  test_serialization.py  test_utils.py  tests.py  utils.py
tests/testing/: settings.py  test_layer.py  tests.py
