[build-system]
requires = ["hatchling >= 1.26", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/docs",
  "/src/crate/*.py",
  "/tests",
  "*.rst",
  "*.txt",
]
exclude = [
  "/docs/.crate-docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/crate"]

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0+unknown"

[project]
name = "crate"
dynamic = ["version"]
description = "CrateDB Python Client"
authors = [{ name = "Crate.io", email = "office@crate.io" }]
requires-python = ">=3.10"
readme = "README.rst"
license = "Apache-2.0"
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        "Topic :: Database",
]
dependencies = [
    "importlib-metadata; python_version<'3.8'",
    "orjson>=3.11.3",
    "urllib3",
    "verlib2>=0.3.1",
]

[dependency-groups]
dev = [
    "certifi>=2025.10.5",
    "coverage<8",
    "mypy<1.19",
    "poethepoet<1",
    "pytest<10",
    "pytz>=2025.2",
    "ruff<0.15",
    "setuptools>=80.9.0",
    "stopit<1.2",
]


[tool.coverage.run]
branch = false
omit = [
  "tests/*",
]
parallel = true
source = [ "src" ]

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "# pragma: no cover",
    "raise NotImplemented",
]
omit = [
    "*/.buildout/eggs/*",
    "buildout-cache/eggs/*",
    "eggs/*",
    "parts/*",
    "src/crate/client/_pep440.py",
]


[tool.mypy]
mypy_path = "src"
packages = [
  "crate",
]
exclude = [
]
check_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
implicit_optional = true
install_types = true
namespace_packages = true
non_interactive = true


[tool.pytest.ini_options]
addopts = "-rA --verbosity=3"
minversion = "2.0"
log_level = "DEBUG"
log_cli_level = "DEBUG"
testpaths = [
  "src",
  "tests",
]
xfail_strict = true
markers = [
]


[tool.ruff]
line-length = 80

extend-exclude = [
    "/example_*",
]

lint.select = [
    # Builtins
    "A",
    # Bugbear
    "B",
    # comprehensions
    "C4",
    # Pycodestyle
    "E",
    # eradicate
    "ERA",
    # Pyflakes
    "F",
    # isort
    "I",
    # pandas-vet
    "PD",
    # return
    "RET",
    # Bandit
    "S",
    # print
    "T20",
    "W",
    # flake8-2020
    "YTT",
]

lint.extend-ignore = [
    # Unnecessary variable assignment before `return` statement
    "RET504",
    # Unnecessary `elif` after `return` statement
    "RET505",
]

lint.per-file-ignores."example_*" = [
    "ERA001", # Found commented-out code
    "T201", # Allow `print`
]
lint.per-file-ignores."devtools/*" = [
    "T201", # Allow `print`
]
lint.per-file-ignores."examples/*" = [
    "ERA001", # Found commented-out code
    "T201", # Allow `print`
]
lint.per-file-ignores."tests/*" = [
    "S101", # Asserts.
    "S105", # Possible hardcoded password assigned to: "password"
    "S106", # Possible hardcoded password assigned to argument: "password"
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
lint.per-file-ignores."src/crate/client/{connection.py,http.py}" = [
    "A004", # Import `ConnectionError` is shadowing a Python builtin
    "A005", # Import `ConnectionError` is shadowing a Python builtin
]
lint.per-file-ignores."tests/client/test_http.py" = [
    "A004", # Import `ConnectionError` is shadowing a Python builtin
]


# ===================
# Tasks configuration
# ===================

[tool.poe.tasks]

check = [
  "lint",
  "test",
]

format = [
  { cmd = "ruff format ." },
  # Configure Ruff not to auto-fix (remove!):
  # unused imports (F401), unused variables (F841), `print` statements (T201), and commented-out code (ERA001).
  { cmd = "ruff check --fix --ignore=ERA --ignore=F401 --ignore=F841 --ignore=T20 --ignore=ERA001 ." },
]

lint = [
  { cmd = "ruff format --check ." },
  { cmd = "ruff check ." },
  { cmd = "mypy" },
]

test = [
  { cmd = "coverage erase" },
  { cmd = "coverage run -m pytest" },
  { cmd = "coverage run bin/test" },
  { cmd = "coverage combine" },
  { cmd = "coverage xml" },
  { cmd = "coverage report" },
]
