[build-system]
requires = ["hatch", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/docs",
  "/src/crate/*.py",
  "/tests",
  "*.rst",
  "*.txt",
]
exclude = [
  "/docs/.crate-docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/crate"]

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0+unknown"

[project]
name = "crate"
dynamic = ["version"]
description = "CrateDB Python Client"
authors = [{ name = "Crate.io", email = "office@crate.io" }]
requires-python = ">=3.10"
readme = "README.rst"
license = "Apache-2.0"
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        "Programming Language :: SQL",
        "Topic :: Database",
        "Topic :: Internet :: WWW/HTTP",
        "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
        "Topic :: System :: Networking",
]
dependencies = [
    "importlib-metadata; python_version<'3.8'",
    "orjson",
    "urllib3",
    "verlib2>=0.3.1",
]

[dependency-groups]
dev = [
    "backports.zoneinfo<1; python_version<'3.9'",
    "certifi",
    "coverage",
    "mypy<1.20",
    "pytest<10",
    "pytz",
    "ruff<0.15",
]
docs = [
    "sphinx",
    "crate-docs-theme",
]


[tool.coverage.run]
branch = false
parallel = true
source = ["src"]

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "# pragma: no cover",
    "raise NotImplemented",
]
omit = [
    "parts/*",
    "src/crate/client/_pep440.py",
]


[tool.mypy]
mypy_path = "src"
packages = [
  "crate",
]
exclude = [
]
check_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
implicit_optional = true
install_types = true
namespace_packages = true
non_interactive = true


[tool.pytest.ini_options]
addopts = "-rA --verbosity=3 --doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
minversion = "2.0"
testpaths = [
  "tests",
]
xfail_strict = true


[tool.ruff]
line-length = 80

extend-exclude = [
    "/example_*",
]

lint.select = [
    # Builtins
    "A",
    # Bugbear
    "B",
    # comprehensions
    "C4",
    # Pycodestyle
    "E",
    # eradicate
    "ERA",
    # Pyflakes
    "F",
    # isort
    "I",
    # pandas-vet
    "PD",
    # return
    "RET",
    # Bandit
    "S",
    # print
    "T20",
    "W",
    # flake8-2020
    "YTT",
]

lint.extend-ignore = [
    # Unnecessary variable assignment before `return` statement
    "RET504",
    # Unnecessary `elif` after `return` statement
    "RET505",
]

lint.per-file-ignores."example_*" = [
    "ERA001", # Found commented-out code
    "T201", # Allow `print`
]
lint.per-file-ignores."devtools/*" = [
    "T201", # Allow `print`
]
lint.per-file-ignores."examples/*" = [
    "ERA001", # Found commented-out code
    "T201", # Allow `print`
]
lint.per-file-ignores."tests/*" = [
    "S101", # Asserts.
    "S105", # Possible hardcoded password assigned to: "password"
    "S106", # Possible hardcoded password assigned to argument: "password"
    "S202", # CrateDB tarballs are trusted
    "S310", # False positive; it's a https url
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
lint.per-file-ignores."src/crate/client/{connection.py,http.py}" = [
    "A004", # Import `ConnectionError` is shadowing a Python builtin
    "A005", # Import `ConnectionError` is shadowing a Python builtin
]
lint.per-file-ignores."tests/client/test_http.py" = [
    "A004", # Import `ConnectionError` is shadowing a Python builtin
]
